--- a/templates/book.handlebars
+++ b/templates/book.handlebars
@@ -2,11 +2,11 @@
   {{#link-to "books" tagName="a"}}Back{{/link-to}}
   <section class="app">
     <nav class="top-navigation">
-      <a href="#" title="Save">*</a>{{!--Save--}}
-      <a href="#" title="Share">></a>{{!--Share--}}
-      <a href="#" title="Embed">{ }</a>{{!--Embed--}}
-      <a href="#" title="Location">!</a>{{!--Location--}}
-      <a href="#" title="Settings">#</a>{{!--Settings--}}
+      <a href="#" title="Save"></a>{{!--Save--}}
+      <a href="#" title="Share"></a>{{!--Share--}}
+      <a href="#" title="Embed"></a>{{!--Embed--}}
+      <a href="#" title="Location"></a>{{!--Location--}}
+      <a href="#" title="Settings"></a>{{!--Settings--}}
       <p>{{phraseCount}}</p>
     </nav>
     <section class="banner">
