--- a/templates/books.handlebars
+++ b/templates/books.handlebars
@@ -5,7 +5,7 @@
       <section class="app">
         <section class="presentation">
           <h2 {{bind-attr title="title"}}>{{title}}</h2>
-          <p class="number">{{phraseCount}}</p>
+          <p class="number">{{phrasesCount}}</p>
         </section>
         <section class="banner">
           {{#link-to "book" this tagName="a"}}
