--- a/templates/application.handlebars
+++ b/templates/application.handlebars
@@ -11,7 +11,7 @@
     {{!-- {{#link-to "projects" tagName="li"}}Projects{{/link-to}} --}}
     {{#link-to "get_involved" tagName="li"}}Get Involved{{/link-to}}
     <li class="donate">
-      <a href="https://www.fracturedatlas.org/site/fiscal/profile?id=11735" target="_blank">Support Us</a>
+      <a href="https://www.fracturedatlas.org/site/fiscal/profile?id=11735" target="_blank">Donate</a>
     </li>
   </ul>
 </nav>
