changed "support us" to "donate", commented next changes, hard-coded localhost ip on index.html for mobile autoreload

--- a/css/stylus/media-queries.styl
+++ b/css/stylus/media-queries.styl
@@ -38,6 +38,7 @@
       width 100%
 
       .banner
+        // Index banner should be selectable
         width 335%
         max-height 125px
 
@@ -98,6 +99,8 @@
               &:first-of-type
                 margin-top 0
 
+        // Figure out why team is a child of page
+        // Team grid should not be fixed width
         .team
           padding 0 30px 30px 30px
 
@@ -115,6 +118,7 @@
               p
                 font-size 0.8em
 
+        // Get involved should not be a form
         &.form
           padding 30px 30px 50px 30px !important
 
