--- a/css/stylus/media-queries.styl
+++ b/css/stylus/media-queries.styl
@@ -1,4 +1,5 @@
 @media only screen and (max-device-width: 480px)
+  $hover = initial !important
   body
     padding-top 0 !important
 
@@ -17,11 +18,14 @@
             float none
             display block
             margin auto
+            padding 5px 5px 0 5px
 
       ul.top-nav
         width 100%
 
         li
+          padding 18px 0 19px 0
+          white-space nowrap
           text-align center
           font-weight 400
           width 33%
@@ -38,13 +42,15 @@
       width 100%
 
       .banner
-        // Index banner should be selectable
-        width 335%
-        max-height 125px
+        width 167%
+
+        &.index
+          background-image url("../img/banner-mobile.jpg")
+          max-height 125px
+          width 100%
 
         &.mission
-          max-height 300px
-          background-position-x -300px
+          max-height 240px
 
         &.team
           max-height 240px
@@ -57,12 +63,18 @@
           background-position-x 52%
 
       .subheader
+        max-height 75px
+        overflow-x scroll
         ul
+          width 375px
           li
             font-weight 400
 
       .page
         padding 0
+
+        h1
+          font-weight 400
 
         ul.activities
               margin 0
@@ -70,7 +82,8 @@
                 float none
                 width 100%
 
-                button,a
+                button, a
+                  font-size 1em
                   margin-top 1em
 
         &.index
@@ -78,11 +91,18 @@
 
           .information
             h1
-              font-size 1.7em
+              font-size 1.3em
 
             a.youTubeLink
+              img
+                width 120%
+                margin-left -10%
+
               .triangle
-                top -100px
+                margin -16px
+                border-width 20px 0 20px 33px
+                top 0
+                margin -42% -16px 37%
 
         &.mission
           padding 0 30px 30px 30px
@@ -99,18 +119,18 @@
               &:first-of-type
                 margin-top 0
 
-        // Figure out why team is a child of page
-        // Team grid should not be fixed width
-        .team
+        &.team
           padding 0 30px 30px 30px
 
           h1
-            font-size 1.4em
+            font-size 1.1em
 
           ul
+            width 100%
+
             li
-              width 32.3%
-              margin 10px 0
+              width 100%
+              margin 20px 0
 
               img
                 padding 0
@@ -118,9 +138,8 @@
               p
                 font-size 0.8em
 
-        // Get involved should not be a form
-        &.form
-          padding 30px 30px 50px 30px !important
+        &.getInvolved
+          padding 20px 30px 50px 30px
 
           h1
             display none
@@ -130,15 +149,74 @@
             float none
             width 90%
 
+        &.form
+          padding 0 30px 50px 30px !important
+
+          form
+            h1
+              display none
+
+            p
+              margin-top 0
+
+            .guidelines
+              .page
+                max-width 120%
+                padding 20px
+                margin -10%
+                font-size 0.7em
+
+                button
+                  margin-bottom 20px
+
+                ul
+                  li
+                    h4
+                      margin-bottom .7em
+
+                    table
+                      width 100%
+
+            ul
+              float left
+
+              li
+                input, label
+                  margin 0
+                  font-size .7em
+
+                &.checkbox
+                  input
+                    margin 11px 0 11px 10px
+
+                  label
+                    width 80%
+
+            textarea
+              margin 0
+              font-size .7em
+
+            .alt-email
+              text-align left
+              margin 3em 0
+
+      .success
+        background rgba(255,255,255,.8)
+
+        .modal
+          width 100%
+          margin-left -50%
+          top 40%
+          border-bottom 1px solid $hover
+
+          h1
+            font-size 1.6em
+
+          p
+            font-size 1.2em
+
     footer
-      font-size 1.2em
-
-      .copyright
-        margin-bottom 20px
-
-        li
-          a
-            font-weight 400 !important
+      font-size 1em
 
       .links
         text-align center
@@ -155,3 +233,10 @@
 
             a
               font-weight 400 !important
+
+      .copyright
+        margin 20px 0 20px 0
+
+        li
+          a
+            font-weight 400 !important
