--- a/templates/get_involved.handlebars
+++ b/templates/get_involved.handlebars
@@ -1,5 +1,5 @@
 <section class="banner getInvolved"></section>
-<section class="page form">
+<section class="page getInvolved">
     <h1>Get involved</h1>
     <p>Wikitongues wouldn't be anywhere without our community of volunteers. If you believe in what we're doing, there are plenty of ways to get involved.</p>
     <ul class="activities">
