--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -1,8 +1,4 @@
-{{#each}}
-    <section class="banner">
-        <img {{bind-attr src="image"}} alt="Wikitongues" class="fallback">
-    </section>
-{{/each}}
+<section class="banner index"></section>
 <section class="page index">
     <div class="information">
         <h1>Every language in the world</h1>
