mobile legal page

--- a/css/stylus/media-queries.styl
+++ b/css/stylus/media-queries.styl
@@ -138,6 +138,16 @@
               p
                 font-size 0.8em
 
+        &.legal
+          padding 0 30px 30px 30px
+          float left
+
+          h1
+            float left
+            width 100%
+            font-size 1.4em
+            margin 0.8em 0
+
         &.getInvolved
           padding 20px 30px 50px 30px
 
