--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -1,6 +1,7 @@
 <section class="banner index"></section>
 <section class="page index">
     <div class="information">
+        {{#link-to "grid_gen" tagName="button"}}Grid Generator{{/link-to}}
         <h1>Every language in the world</h1>
         <a class="youTubeLink" href="https://www.youtube.com/user/WikiTongues" target="_blank">
             <img src="img/youTubeLink.png" alt="">
