--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -1,4 +1,6 @@
-<section class="banner index"></section>
+<section class="banner index">
+  {{face-grid}}
+</section>
 <section class="page index">
     <div class="information">
         <h1>Every language in the world</h1>
