bringing in faq

--- a/templates/application.handlebars
+++ b/templates/application.handlebars
@@ -10,6 +10,7 @@
     {{!-- {{#link-to "expeditions" tagName="li"}}Expeditions{{/link-to}} --}}{{!-- Expeditions should live inside of Projects --}}
     {{!-- {{#link-to "projects" tagName="li"}}Projects{{/link-to}} --}}
     {{#link-to "get_involved" tagName="li"}}Get Involved{{/link-to}}
+    {{#link-to "faq" tagName="li"}}FAQ{{/link-to}}
     <li class="donate">
       <a href="https://www.fracturedatlas.org/site/fiscal/profile?id=11735" target="_blank">Donate</a>
     </li>
