--- a/css/stylus/banner.styl
+++ b/css/stylus/banner.styl
@@ -6,7 +6,7 @@
     max-height 550px
     overflow hidden
 
-    &.index, &.team, &.mission, &.getInvolved
+    &.index, &.team, &.mission, &.getInvolved, &.faq
         height 550px
         background-size cover
 
@@ -23,7 +23,7 @@
         background-image url("../img/teamBanner.jpg")
         background-position-y 50%
 
-    &.getInvolved
+    &.getInvolved, &.faq
         background-image url("../img/getInvolvedBanner.jpg")
         background-position-y 50%
 
