--- a/css/stylus/faq.styl
+++ b/css/stylus/faq.styl
@@ -1,16 +1,17 @@
-ul
-  max-width 800px
-  margin auto !important
+.faq
+  ul
+    max-width 800px
+    margin auto !important
 
-  li
-    &.question
-      clear both
+    li
+      &.question
+        clear both
 
-    &.answer
-      font-size .9em
-      line-height 1.5em
-      color $secondary-blue
-      margin-bottom 1.3em
+      &.answer
+        font-size .9em
+        line-height 1.5em
+        color $secondary-blue
+        margin-bottom 1.3em
 
-      a
-        text-link()
+        a
+          text-link()
