--- a/css/variables.styl
+++ b/css/variables.styl
@@ -20,3 +20,13 @@ button()
   &:hover
     background $hover
     // border 1px solid lighten($blue, 89%)
+
+text-link()
+  padding 0.2em
+  background lighten($hover, 40%)
+  margin 0 -0.2em
+  border-radius $radius
+
+  &:hover
+    background $hover
+    color initial
