--- a/templates/faq.handlebars
+++ b/templates/faq.handlebars
@@ -1,5 +1,5 @@
 <section class="banner faq"></section>
-<section class="page">
+<section class="page faq">
     <h1>Frequently Asked Questions</h1>
     <p></p>
     <ul>
@@ -16,15 +16,4 @@
       <li class="question">Why is my language not represented on the project?</li>
       <li class="answer">We are working night and day to provide access to every language in the world. If your language or that of a friend or relative is not yet included, please {{#link-to "submit"}}send us a video{{/link-to}} of it, or at least {{#link-to "contact"}}a message{{/link-to}} letting us know.</li>
     </ul>
-    {{!-- <ul class="activities">
-      <li>
-        {{#link-to "submit" classNames="subheaderLink" tagName="button"}}Submit a video{{/link-to}}
-      </li>
-      <li>
-        {{#link-to "volunteer" classNames="subheaderLink" tagName="button"}}Volunteer{{/link-to}}
-      </li>
-      <li>
-        {{#link-to "contact" classNames="subheaderLink" tagName="button"}}Contact{{/link-to}}
-      </li>
-    </ul> --}}
 </section>
