--- a/css/stylus/about.styl
+++ b/css/stylus/about.styl
@@ -1,11 +1,4 @@
 .mission
   p
     a
-      padding 0.2em
-      background lighten($hover, 40%)
-      margin 0 -0.2em
-      border-radius $radius
-
-      &:hover
-        background $hover
-        color initial
+      text-link()
