added phrasebook entry hovers

--- a/css/stylus/book.styl
+++ b/css/stylus/book.styl
@@ -6,9 +6,8 @@
   padding-bottom 0
   float left
 
-  >a
+  a.back
     float left
-    position fixed
 
   .app
     border-radius $radius
@@ -27,23 +26,22 @@
       width 100%
 
       &:hover
-        height 250px
+        height 230px
         transition height ease-in-out 2*$transition-time
 
         img
-          margin-top 0
+          margin-top -25%
           transition margin-top ease-in-out 2*$transition-time
 
       img
-        margin-top -10px
+        margin-top -23%
 
     nav
       width 100%
       position initial
       top initial
       background #fff
-      border-bottom 3px solid rgba(0,0,0,.3)
-      margin-bottom -3px
+      border-bottom 2px solid lighten($blue, 90%)
       z-index 5
 
       &.top-navigation
@@ -74,6 +72,7 @@
               float left
 
         a
+          cursor pointer
           padding 11px
           height 40px
           width 40px
@@ -110,7 +109,7 @@
               transition transform $transition-time ease-in-out
 
       &.language-navigation
-        border-bottom 3px solid darken(#F4F4F4, 4%)
+        border-bottom 3px solid lighten($blue, 90%)
 
         &.sticky
           h1
@@ -138,6 +137,7 @@
           margin-top 0.7em
 
         h1
+          cursor pointer
           width 47%
           float left
           margin 0
@@ -155,65 +155,215 @@
       width 100%
       font-family 'Open Sans',helvetica,sans-serif
 
-      ul
-        display inline-block
+      // ul
+      //   display inline-block
+      //   width 100%
+
+        // li
+        //   width inherit
+        //   float left
+        //   padding .6em 0
+        //   border 0px solid lighten($blue, 89%)
+
+        //   &:hover
+        //     background lighten($blue, 92%)
+        //     border-top 3px solid lighten($blue, 89%)
+        //     border-bottom 3px solid lighten($blue, 89%)
+
+        //   p
+        //     clear both
+        //     width 100%
+        //     margin 0
+
+        //     &.phrase-source
+        //       float left
+        //       padding 0 0.5em
+        //       margin-bottom .1em
+
+        //       a
+        //         background #BCDBFE
+        //         border-radius 51px 51px 51px 0
+        //         border 1px solid transparent
+
+        //         &:hover
+        //           background lighten(#BCDBFE, 6%)
+        //           border-color darken(#BCDBFE, 3%)
+
+        //     &.phrase-target
+        //       float right
+        //       text-align right
+        //       padding 0 0.5em
+
+        //       a
+        //         background lighten($secondary-blue, 25%)
+        //         border-radius 51px 51px 0 51px
+        //         border 1px solid transparent
+
+        //         &:hover
+        //           background lighten($secondary-blue, 31%)
+        //           border-color lighten($secondary-blue, 18%)
+
+        //     a
+        //       padding .5em .8em
+        //       font-size .75em
+
+        //       &:hover
+        //         color $blue !important
+
+      ul.entries
+        font-family 'Open Sans', sans-serif
+        clear both
         width 100%
+        padding 0
+        font-size 0.6em
+        background #fafafa
 
         p.empty
           text-align center
           color $secondary-blue
           margin-bottom 180px
 
-        li
-          width inherit
-          float left
-          padding .6em 0
-          border 0px solid lighten($blue, 89%)
+        li.entry
+          width 100%
+          display inline-block
+          padding 1em 0
+
+          &:last-of-type
+            border-bottom none
 
           &:hover
-            background lighten($blue, 92%)
-            border-top 3px solid lighten($blue, 89%)
-            border-bottom 3px solid lighten($blue, 89%)
+            background #f6f6f6
 
-          p
-            clear both
+          ul
+            display inline-block
             width 100%
-            margin 0
+            padding 0
 
-            &.phrase-source
+            li
+              display inline-block
+              width 100%
               float left
-              padding 0 0.5em
-              margin-bottom .1em
-
-              a
-                background #BCDBFE
-                border-radius 51px 51px 51px 0
-                border 1px solid transparent
-
-                &:hover
-                  background lighten(#BCDBFE, 6%)
-                  border-color darken(#BCDBFE, 3%)
-
-            &.phrase-target
-              float right
-              text-align right
-              padding 0 0.5em
-
-              a
-                background lighten($secondary-blue, 25%)
-                border-radius 51px 51px 0 51px
-                border 1px solid transparent
-
-                &:hover
-                  background lighten($secondary-blue, 31%)
-                  border-color lighten($secondary-blue, 18%)
-
-            a
-              padding .5em .8em
-              font-size .75em
 
               &:hover
-                color $blue !important
+                .options-wrapper
+                    width 80px
+
+              p
+                width initial
+                display inline-block
+                margin 0
+                padding .7em 1em
+                position relative
+                z-index 1
+
+                &:hover
+                  cursor pointer
+                  box-shadow 0 3px 4px 1px #ccc
+
+              &.source
+                p
+                  box-shadow 0 3px 4px 0 #ddd
+                  border-radius 21px 21px 21px 0
+                  float left
+                  background #C4CDD1
+                  border darken(#C4CDD1, 5%)
+                  margin-left .5em
+
+                  &:hover
+                    background darken(#C4CDD1, 10%)
+
+                .options-wrapper
+                  margin-left -23px
+                  float left
+
+                  .options
+                    border-radius 0 22px 22px 0
+                    margin-left -220px
+                    padding-left 40px
+                    float left
+
+                &:hover
+                  .options-wrapper
+                    .options
+                      margin-left -20px
+
+                span.circle
+                  float left
+                  margin-right 0
+
+              &.target
+                p
+                  box-shadow 0 3px 4px 0 #ccc
+                  border-radius 21px 21px 0 21px
+                  float right
+                  background #BBDBFD
+                  border-color 1px solid darken(#BBDBFD, 40%)
+                  margin-right .5em
+
+
+                  &:hover
+                    background darken(#bbdbfd, 10%)
+
+                .options-wrapper
+                  margin-right -23px
+                  float right
+
+                  .options
+                    border-radius 22px 0 0 22px
+                    margin-right -220px
+                    padding-right 40px
+                    float right
+
+                &:hover
+                  .options-wrapper
+                    .options
+                      margin-right -20px
+
+                span.circle
+                  float right
+                  margin-left 0
+
+              span.circle
+                margin 1.2em .5em
+                border-radius 100%
+                width 10px
+                height 10px
+                float left
+                border 1px solid #C5C9CB
+                display block
+
+                &:hover
+                  cursor pointer
+                  background #C5C9CB
+
+              .options-wrapper
+                width 0
+                overflow hidden
+                display inline-block
+                height 47px
+
+                .options
+                  width 80px
+                  display inline-block
+                  background #fff
+                  border darken(#f9f9f9, 7%)
+                  box-shadow 0 2px 3px 0 #ddd
+                  position relative
+                  z-index 0
+
+                  a
+                    display inline-block
+                    float left
+                    border-radius 100%
+                    padding 6px
+
+                    img
+                      float left
+                      height 30px
+                      width 30px
+
+                    &:hover
+                      background #fff
 
       button
         background none
