--- a/templates/book.handlebars
+++ b/templates/book.handlebars
@@ -1,16 +1,16 @@
 <section class="page poly">
-  {{#link-to "books" tagName="a"}}Back{{/link-to}}
+  {{#link-to "books" tagName="a" class="back"}}Back{{/link-to}}
   <section class="app">
     <nav class="top-navigation">
-      <a href="" title="Save"></a>
+      <a title="Save"></a>
       <p>{{phraseCount}}</p>
       <div class="rightSubNav">
-        <a href="" title="More"></a>
-        <a href="" title="Settings"></a>
+        <a title="More"></a>
+        <a title="Settings"></a>
         <div class="moreNavItems">
-          <a href="" title="Share"></a>
-          <a href="" title="Embed"></a>
-          <a href="" title="Location"></a>
+          <a title="Share"></a>
+          <a title="Embed"></a>
+          <a title="Location"></a>
         </div>
       </div>
     </nav>
@@ -18,22 +18,61 @@
       <img {{bind-attr src="bannerUrl" alt="User"}} class="fallback">
     </section>
     <nav class="language-navigation">
-      <h1 class="source"><a href="">{{sourceName}}</a></h1>
-      <a href="" class="direction">></a>
-      <h1 class="target"><a href="">{{targetName}}</a></h1>
+      <h1 class="source"><a>{{sourceName}}</a></h1>
+      <a class="direction">></a>
+      <h1 class="target"><a>{{targetName}}</a></h1>
     </nav>
     <section class="phrases">
-      <ul>
+      <ul class="entries">
         {{#each phrases}}
-          <li>
-            <p class="phrase-source"><a class="phrase" href="">{{sourcePhrase}}</a></p>
-            <p class="phrase-target"><a class="phrase" href="">{{targetPhrase}}</a></p>
+          <li class="entry">
+            <ul>
+              <li class="source">
+                <p>{{sourcePhrase}}</p>
+                <div class="options-wrapper">
+                  <div class="options">
+                    <a href="">
+                      <img src="img/poly/sound.svg" alt="">
+                    </a>
+                    {{!-- <a href="">
+                      <img src="img/poly/gender-f.svg" alt="">
+                    </a>
+                    <a href="">
+                      <img src="img/poly/gender-m.svg" alt="">
+                    </a>
+                    <a href="">
+                      <img src="img/poly/new.svg" alt="">
+                    </a> --}}
+                  </div>
+                </div>
+              </li>
+              <li class="target">
+                <p>{{targetPhrase}}</p>
+                <div class="options-wrapper">
+                  <div class="options">
+                    <a href="">
+                      <img src="img/poly/sound.svg" alt="">
+                    </a>
+                    {{!-- <a href="">
+                      <img src="img/poly/gender-f.svg" alt="">
+                    </a>
+                    <a href="">
+                      <img src="img/poly/gender-m.svg" alt="">
+                    </a>
+                    <a href="">
+                      <img src="img/poly/new.svg" alt="">
+                    </a> --}}
+                  </div>
+                </div>
+              </li>
+            </ul>
           </li>
           {{else}}
           <p class="empty">Shoot! There is nothing here!</p>
         {{/each}}
       </ul>
-      <button><a href="">+</a></button>
+      <button><a>+</a></button>
     </section>
   </section>
 </section>
+
